[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Personal Settings for linux environments"
authors = ["Sam Martin <Nivekkas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.9"
molecule = "^2.22"
docker-py = "^1.10"

[tool.poetry.dev-dependencies]
ipython = "^7.9"
ansible-lint = "^4.1"
ipdb = "^0.12.2"
python-language-server = {version = "^0.30.0", extras = ["all"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
