[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Personal Settings for linux environments"
authors = ["Sam Martin <Nivekkas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "*"
molecule = "*"
docker-py = "*"

[tool.poetry.dev-dependencies]
ipython = "*"
ansible-lint = "*"
ipdb = "*"
python-language-server = {version = "*", extras = ["all"]}
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
